Fixed login button alignment on login page

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -19,6 +19,10 @@
   padding: 2px 30px;
   text-decoration:none;
   font-weight: bold;
+  z-index: 4;
+}
+.slider.fullscreen ul.indicators{
+  z-index: 2;
 }
 /*.myButton:hover {
   background-color:transparent;
